--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -51,10 +51,8 @@
     <kuali.compile.target>1.6</kuali.compile.target>
 
     <!-- This profile provides basic quality control for official Kuali artifacts (GPG signature, attached sources/javadocs etc.)-->
-    <kuali.release.arguments>-Pkuali-release</kuali.release.arguments>
-    <kuali.release.use.profile>false</kuali.release.use.profile>
-
-    <!-- These goals constitute the default release process (publish signed artifacts and required technical doc's) -->
+    <kuali.release.profiles>kuali-release</kuali.release.profiles>
+    <kuali.release.use.maven.profile>true</kuali.release.use.maven.profile>
     <kuali.release.goals>deploy site-deploy</kuali.release.goals>
     <kuali.release.prepare.goals>clean verify</kuali.release.prepare.goals>
 
@@ -278,26 +276,17 @@
           <artifactId>maven-release-plugin</artifactId>
           <version>2.1</version>
           <configuration>
-            <arguments>${kuali.release.arguments}</arguments>
-            <useReleaseProfile>${kuali.release.use.profile}</useReleaseProfile>
-            <developmentVersion>${kuali.development.version}</developmentVersion>
-            <releaseVersion>${kuali.release.version}</releaseVersion>
-            <username>${kuali.release.username}</username>
-            <password>${kuali.release.password}</password>
-            <goals>${kuali.release.goals}</goals>
-            <preparationGoals>${kuali.release.prepare.goals}</preparationGoals>
-          </configuration>
-          <!-- 
-          <configuration>
             <dryRun>${kuali.release.dryrun}</dryRun>
             <arguments>${kuali.release.arguments}</arguments>
-            <useReleaseProfile>${kuali.release.use.profile}</useReleaseProfile>
+            <releaseProfiles>${kuali.release.profiles}</releaseProfiles>
+            <useReleaseProfile>${kuali.release.use.maven.profile}</useReleaseProfile>
             <developmentVersion>${kuali.development.version}</developmentVersion>
             <releaseVersion>${kuali.release.version}</releaseVersion>
             <username>${kuali.release.username}</username>
             <password>${kuali.release.password}</password>
+            <preparationGoals>${kuali.release.prepare.goals}</preparationGoals>
+            <goals>${kuali.release.goals}</goals>
           </configuration>
-           -->
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
