--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -13,7 +13,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kuali</groupId>
   <artifactId>kuali</artifactId>
-  <version>87-SNAPSHOT</version>
+  <version>87</version>
   <packaging>pom</packaging>
   <name>The Kuali Foundation</name>
   <description>
@@ -133,9 +133,9 @@
     </snapshotRepository>
   </distributionManagement>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/parent</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/parent</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/trunk/parent</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-87</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-87</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-87</url>
   </scm>
   <build>
     <extensions>
