git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@878 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -9,7 +9,8 @@
   express or implied. See the License for the specific language governing
   permissions and limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kuali</groupId>
   <artifactId>kuali</artifactId>
@@ -324,14 +325,6 @@
           <groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
           <artifactId>maven-svn-revision-number-plugin</artifactId>
           <version>1.6</version>
-          <configuration>
-            <verbose>true</verbose>
-            <entries>
-              <entry>
-                <prefix>svn</prefix>
-              </entry>
-            </entries>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -445,6 +438,23 @@
           <plugin>
             <groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
             <artifactId>maven-svn-revision-number-plugin</artifactId>
+            <configuration>
+              <verbose>true</verbose>
+              <entries>
+                <entry>
+                  <prefix>svn</prefix>
+                </entry>
+              </entries>
+            </configuration>
+            <executions>
+              <execution>
+                <id>scm-info</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>revision</goal>
+                </goals>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
