--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali</artifactId>
-    <version>84</version>
+    <version>94-SNAPSHOT</version>
   </parent>
   <groupId>org.kuali</groupId>
   <artifactId>kuali-common</artifactId>
@@ -98,6 +98,11 @@
       <plugins>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>2.4</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
           <artifactId>findbugs-maven-plugin</artifactId>
           <version>2.3.1</version>
         </plugin>
@@ -110,11 +115,21 @@
           <groupId>com.atlassian.maven.plugins</groupId>
           <artifactId>maven-clover2-plugin</artifactId>
           <version>3.0.4</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>cobertura-maven-plugin</artifactId>
-          <version>2.4</version>
+          <configuration>
+            <licenseLocation>${kuali.clover.license.location}</licenseLocation>
+            <historyDir>${kuali.clover.history.dir}</historyDir>
+          </configuration>
+          <executions>
+            <execution>
+              <id>generate-clover-info</id>
+              <phase>pre-site</phase>
+              <goals>
+                <goal>instrument</goal>
+                <goal>aggregate</goal>
+                <goal>save-history</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -126,7 +141,7 @@
           </configuration>
           <executions>
             <execution>
-              <id>generate-jxr-info</id>
+              <id>generate-source-xref</id>
               <phase>pre-site</phase>
               <goals>
                 <goal>jxr</goal>
@@ -154,7 +169,7 @@
               <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <!-- Version is included here because it does not inherit correctly from the pluginManagement section of the parent pom -->
+                <!-- Version is included here only because it does not inherit correctly from the pluginManagement section of the parent pom -->
                 <version>2.7</version>
                 <configuration>
                   <excludePackageNames>${kuali.javadoc.exclude.package.names}</excludePackageNames>
@@ -193,7 +208,7 @@
               <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <!-- Version is included here because it does not inherit correctly from the pluginManagement section of the parent pom -->
+                <!-- Version is included here only because it does not inherit correctly from the pluginManagement section of the parent pom -->
                 <version>2.3</version>
                 <configuration>
                   <dependencyLocationsEnabled>${kuali.reporting.dependency.locations}</dependencyLocationsEnabled>
@@ -241,6 +256,9 @@
                   <aggregate>${kuali.reporting.aggregate}</aggregate>
                 </configuration>
               </plugin>
+              <!-- Included here as a default only until Maven 3.1 is out which will support 'mixins'.  
+                   This plugin only generates output if the project is a maven plugin.  
+                   For projects that are not maven plugins it does nothing. -->
               <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
@@ -292,57 +310,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>com.atlassian.maven.plugins</groupId>
+        <artifactId>maven-clover2-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jxr-plugin</artifactId>
+      </plugin>
+    </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>kuali-release</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.atlassian.maven.plugins</groupId>
-            <artifactId>maven-clover2-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>generate-clover-info</id>
-                <phase>pre-site</phase>
-                <goals>
-                  <goal>instrument</goal>
-                  <goal>aggregate</goal>
-                  <goal>save-history</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <licenseLocation>${kuali.clover.license.location}</licenseLocation>
-              <historyDir>${kuali.clover.history.dir}</historyDir>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>test-jar</id>
-                <goals>
-                  <goal>test-jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-source-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>attach-test-sources</id>
-                <goals>
-                  <goal>test-jar-no-fork</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
