git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@904 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,8 @@
   express or implied. See the License for the specific language governing
   permissions and limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -141,6 +142,20 @@
           </configuration>
           <executions>
             <execution>
+              <configuration>
+                <aggregate>true</aggregate>
+              </configuration>
+              <id>generate-aggregated-source-xref</id>
+              <phase>pre-site</phase>
+              <goals>
+                <goal>jxr</goal>
+                <goal>test-jxr</goal>
+              </goals>
+            </execution>
+            <execution>
+              <configuration>
+                <aggregate>false</aggregate>
+              </configuration>
               <id>generate-source-xref</id>
               <phase>pre-site</phase>
               <goals>
