--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali</artifactId>
-    <version>94-SNAPSHOT</version>
+    <version>94</version>
   </parent>
   <groupId>org.kuali</groupId>
   <artifactId>kuali-common</artifactId>
