--- a/kuali-spring-util/pom.xml
+++ b/kuali-spring-util/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -8,7 +9,7 @@
   </parent>
   <groupId>org.kuali.spring</groupId>
   <artifactId>kuali-spring-util</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.0-SNAPSHOT</version>
   <name>Kuali Spring Utilities</name>
   <url>http://${kuali.site.hostname}/spring/${project.artifactId}/${project.version}</url>
   <description>Various utility methods for Spring</description>
@@ -18,9 +19,9 @@
     <kuali.cglib.version>2.2</kuali.cglib.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/kuali-spring-util-1.1.0</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/kuali-spring-util-1.1.0</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/kuali-spring-util-1.1.0</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kuali-spring-util</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kuali-spring-util</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/kuali-spring-util</url>
   </scm>
   <dependencies>
     <dependency>
