--- a/kuali-spring-util/pom.xml
+++ b/kuali-spring-util/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.kuali.spring</groupId>
   <artifactId>kuali-spring-util</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.1-SNAPSHOT</version>
   <name>Kuali Spring Utilities</name>
   <url>http://${kuali.site.hostname}/spring/${project.artifactId}/${project.version}</url>
   <description>Various utility methods for Spring</description>
@@ -18,9 +18,9 @@
     <kuali.cglib.version>2.2</kuali.cglib.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/kuali-spring-util-1.1.0</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/kuali-spring-util-1.1.0</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/kuali-spring-util-1.1.0</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kuali-spring-util</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kuali-spring-util</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/kuali-spring-util</url>
   </scm>
   <dependencies>
     <dependency>
