Change kcdly30 to kcwklyig environment
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5770 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kcwklyig/deploy.cfg
+++ b/kc/kcwklyig/deploy.cfg
@@ -6,5 +6,5 @@ dbType=mysql
 dbMode=embedded
 import.torque.database.user=kcwklyig
 import.torque.database.schema=kcwklyig
-import.torque.database.password=wkly174kc
+import.torque.database.password=wklyig174kc
 import.torque.database.url=jdbc:mysql://localhost:3306/kcwklyig
