--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
   </properties>
   <dependencies>
 
-    <!-- 
+    <!--
     <dependency>
       <groupId>jdo</groupId>
       <artifactId>jdo</artifactId>
@@ -163,7 +163,7 @@
       <artifactId>log4j</artifactId>
       <version>1.2.8</version>
       <optional>true</optional>
-      <scope>runtime</scope>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>p6spy</groupId>
@@ -173,7 +173,7 @@
     </dependency>
     <dependency>
       <groupId>torque</groupId>
-      <artifactId>torque</artifactId>
+      <artifactId>torque-gen</artifactId>
       <version>3.1.1</version>
       <optional>true</optional>
     </dependency>
@@ -209,6 +209,12 @@
       <groupId>xml-apis</groupId>
       <artifactId>xml-apis</artifactId>
       <version>1.3.02</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.ddlutils</groupId>
+      <artifactId>ddlutils</artifactId>
+      <version>1.0</version>
+      <optional>true</optional>
     </dependency>
   </dependencies>
   <build>
