Make the phase clover information gets generated by configurable via a property
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@989 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -286,7 +286,7 @@
         <executions>
           <execution>
             <id>generate-clover-info</id>
-            <phase>pre-site</phase>
+            <phase>${kuali.clover.generate.info.phase}</phase>
             <goals>
               <goal>instrument</goal>
               <goal>aggregate</goal>
