--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>10</version>
+    <version>11-SNAPSHOT</version>
   </parent>
   <groupId>org.kuali.rice</groupId>
   <artifactId>rice</artifactId>
@@ -151,6 +151,8 @@
     <rice.site.dir>${basedir}/target/site</rice.site.dir>
     <!-- Where the generated documentation (pdf, html) will be generated -->
     <rice.docbook.dest>${rice.site.dir}/reference</rice.docbook.dest>
+    
+    <kuali.clover.generate.info.phase>none</kuali.clover.generate.info.phase>
   </properties>
 
   <build>
