Add issueManagement section
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@993 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -35,6 +35,10 @@
     <url>http://www.kuali.org/</url>
   </organization>
   <inceptionYear>2004</inceptionYear>
+  <issueManagement>
+    <system>JIRA</system>
+    <url>http://jira.kuali.org</url>
+  </issueManagement>
   <developers>
     <developer>
       <id>kuali</id>
