Remove description so it inherits and displays the description for Kuali Foundation
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@994 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,14 +14,13 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali</artifactId>
-    <version>98</version>
+    <version>99-SNAPSHOT</version>
   </parent>
   <groupId>org.kuali</groupId>
   <artifactId>kuali-common</artifactId>
   <version>11-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Kuali Common</name>
-  <description>Provides reasonable defaults for common items</description>
   <properties>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm z</maven.build.timestamp.format>
     <!-- Explicitly set build timestamp as a custom property.  The maven-resource-plugin is not filtering values correctly without this -->
