--- a/common/pom.xml
+++ b/common/pom.xml
@@ -73,6 +73,9 @@
     <kuali.javadoc.link.8>${kuali.javadoc.link.1}</kuali.javadoc.link.8>
     <kuali.javadoc.link.9>${kuali.javadoc.link.1}</kuali.javadoc.link.9>
     <kuali.javadoc.link.10>${kuali.javadoc.link.1}</kuali.javadoc.link.10>
+
+    <!--  -->
+    <kuali.testjar.phase>package</kuali.testjar.phase>
   </properties>
   <repositories>
     <repository>
@@ -301,6 +304,7 @@
         <executions>
           <execution>
             <id>test-jar</id>
+            <phase>${kuali.testjar.phase}</phase>
             <goals>
               <goal>test-jar</goal>
             </goals>
