Fixed issue with maven-svn-revision-number-plugin where it was using ${kuali.svn.empty} instead of ${kuali.svn.depth}
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@1008 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -313,7 +313,7 @@
             <entries>
               <entry>
                 <prefix>${kuali.svn.prefix}</prefix>
-                <depth>${kuali.svn.empty}</depth>
+                <depth>${kuali.svn.depth}</depth>
               </entry>
             </entries>
           </configuration>
