More unit testing
git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1043 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/db-jdbc/src/test/resources/kualidba.properties
+++ b/impex/db-jdbc/src/test/resources/kualidba.properties
@@ -3,4 +3,4 @@ kuali.jdbc.username=KSTEST
 kuali.jdbc.password=KSTEST
 kuali.jdbc.dba.url=jdbc:oracle:thin:@deploy.ks.kuali.org:1521:KS
 kuali.jdbc.dba.password=gw570229
-kuali.jdbc.dba.sql.execute=false
+kuali.jdbc.dba.sql.execute=true
