- Version 102 of the Kuali POM - Make use of the property for controlling the javadoc plugin - Update the maven-javadoc-plugin config inside <pluginManagement> so it mirrors that configuration used by the maven-site-plugin when generating the site.  This allows users to invoke javadoc:jar directly.
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@1066 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,12 +9,13 @@
   express or implied. See the License for the specific language governing
   permissions and limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali</artifactId>
-    <version>101</version>
+    <version>102</version>
   </parent>
   <groupId>org.kuali</groupId>
   <artifactId>kuali-common</artifactId>
@@ -119,6 +120,36 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>${kuali.javadoc.plugin.version}</version>
+          <configuration>
+            <excludePackageNames>${kuali.javadoc.exclude.package.names}</excludePackageNames>
+            <links>
+              <link>${kuali.javadoc.link.1}</link>
+              <link>${kuali.javadoc.link.2}</link>
+              <link>${kuali.javadoc.link.3}</link>
+              <link>${kuali.javadoc.link.4}</link>
+              <link>${kuali.javadoc.link.5}</link>
+              <link>${kuali.javadoc.link.6}</link>
+              <link>${kuali.javadoc.link.7}</link>
+              <link>${kuali.javadoc.link.8}</link>
+              <link>${kuali.javadoc.link.9}</link>
+              <link>${kuali.javadoc.link.10}</link>
+            </links>
+            <additionalJOption>${kuali.javadoc.additional.joption}</additionalJOption>
+            <maxmemory>${kuali.javadoc.maxmemory}</maxmemory>
+            <linksource>${kuali.javadoc.linksource}</linksource>
+            <javadocVersion>${kuali.javadoc.tool.version}</javadocVersion>
+            <show>${kuali.javadoc.show}</show>
+            <debug>${kuali.javadoc.debug}</debug>
+            <source>${kuali.compile.source}</source>
+            <quiet>${kuali.javadoc.quiet}</quiet>
+            <aggregate>${kuali.javadoc.aggregate}</aggregate>
+            <encoding>${project.build.sourceEncoding}</encoding>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jxr-plugin</artifactId>
           <version>2.2</version>
           <configuration>
@@ -146,7 +177,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <!-- Version is included here only because it does not inherit correctly from the pluginManagement section of the parent pom -->
-                <version>2.7</version>
+                <version>${kuali.javadoc.plugin.version}</version>
                 <configuration>
                   <excludePackageNames>${kuali.javadoc.exclude.package.names}</excludePackageNames>
                   <links>
@@ -170,6 +201,7 @@
                   <source>${kuali.compile.source}</source>
                   <quiet>${kuali.javadoc.quiet}</quiet>
                   <aggregate>${kuali.javadoc.aggregate}</aggregate>
+                  <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
                 <reportSets>
                   <reportSet>
