--- a/kc/krwkly30/deploy.cfg
+++ b/kc/krwkly30/deploy.cfg
@@ -1,5 +1,4 @@
-svnLocation=rice/tags/rice-1.0.3.2-m4
-svnRevision=20973
+svnLocation=rice/tags/rice-1.0.3.2
 deployURL=test.kc.kuali.org:/opt/kc/wkly30/webapps/kr-wkly30.war
 configURL=test.kc.kuali.org:~/kuali/main/wkly30/
 
