--- a/kc/krdba/deploy.cfg
+++ b/kc/krdba/deploy.cfg
@@ -1,3 +1,3 @@
-svnLocation=rice/tags/rice-release-1-0-3-tag
+svnLocation=rice/tags/rice-1.0.3.2
 deployURL=test.kc.kuali.org:/opt/kc/dba/webapps/kr-dba.war
 configURL=test.kc.kuali.org:~/kuali/main/dba/
