--- a/kc/krrelease/deploy.cfg
+++ b/kc/krrelease/deploy.cfg
@@ -1,5 +1,4 @@
-svnLocation=rice/branches/rice-release-1-0-3-2-br
-svnRevision=20704
+svnLocation=rice/tags/rice-1.0.3.2
 deployURL=test.kc.kuali.org:/opt/kc/release/webapps/kr-release.war
 configURL=test.kc.kuali.org:~/kuali/main/release/
 
